# revbot

./: Cargo.toml  LICENSE  README.md
conf/: default.toml
src/: main.rs  message.rs  webex.rs
src/gitlab/: client.rs  common.rs  mod.rs  webhook.rs
